# hexlet_pytest

./: pyproject.toml
hexlet_pytest/: example.py
tests/: test_stack.py
